# whisper-local-windows

./: .gitignore  README.md  build-exe.ps1  config.yaml  docker-compose.yml  lazy-to-text-ui.py  lazy_to_text.spec  pyproject.toml
app/: audio_feedback.py  audio_recorder.py  config_manager.py  hotkey_listener.py  instance_manager.py  logging_utils.py  model_mapping.py  state_manager.py  system_tray.py  ui_tkinter.py  utils.py  whisper_engine.py
src/whisper_key/: audio_feedback.py  clipboard_manager.py  config_manager.py  docker_backend_manager.py  hotkey_listener.py  instance_manager.py  logging_utils.py  state_manager.py  system_tray.py  ui_tkinter.py  utils.py
src/whisper_key/assets/: .gitkeep
